# vdx-render-api

./: .env.example  .gitignore  Dockerfile  EDITOR_2_RELATORIO.md  Makefile  README.md  SCHEMA_V2_RELATORIO_FINAL.md  SPRINT_DRAGDROP_REPORT.md  confronto_vendedora_catalogos.md  constitution_db_v2.json  etl_v2_relatorio.md  migration_report.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  config.py  main.py
app/_deprecated/: catalogo.py  classificador.py  (+5 more)
docs/: ARCHITECTURE.md  OPERATIONS.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: etl_v2_from_ferragens.py  generate_image.py  ingestao_glasspecas_2022.py  ingestao_gms_blindex.py  migrate_constitution_canonical.py  seed_aliases_niedja.py
tests/: __init__.py  conftest.py  test_canonical_endpoints.py  test_catalogo.py  test_catalogo_importer.py  test_catalogo_query.py  test_constitution_catalog.py  test_dump_importer.py  test_dump_query.py  test_editor_salvar.py  test_etl_v2.py  test_ferragens_v2.py  test_fixes_definitivos.py  test_fotorrealista_puxador.py  test_import_get_chave.py  test_import_tipologia.py  test_ingestao_glasspecas_2022.py  test_ingestao_gms.py  test_migration_canonical.py  test_photorealistic_pipeline.py  test_proposal.py  test_renderer_puxador.py  test_scene_builder.py  test_schema_v2.py  test_seed_aliases_niedja.py  test_smart_vision.py  test_sprint8_geometria.py  test_svg_engine.py  test_view_token.py
tools/: backup_db.sh  catalog_loader.py  pregen_fotorrealistas.py
(+132 files in other folders)
